--- a/my-app/src/components/customer-review/customer-review.css
+++ b/my-app/src/components/customer-review/customer-review.css
@@ -4,8 +4,11 @@
   gap: 20px;
 }
 
+
+
 .sliderImg {
-  width: 400px;
+  height: 100%;
+  max-height: 150px;
 }
 
 .sliderImg img {
@@ -49,4 +52,17 @@
 
 .headlineR {
   z-index: 2;
+}
+
+@media (max-width: 500px) {
+  .slide-content {
+    flex-wrap: wrap;
+    height: 260px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .sliderImg {
+    height: 100px;
+  }
 }
