--- a/my-app/src/components/first-screen/first-screen.css
+++ b/my-app/src/components/first-screen/first-screen.css
@@ -28,7 +28,8 @@
   border: 0;
   text-decoration: none;
   cursor: pointer;
-  width: 290px;
+  max-width: 290px;
+  width: 100%;
   font-family: "Open Sans", Helvetica, sans-serif;
   color: #fff;
   font-weight: 700;
@@ -37,7 +38,7 @@
 
   display: block;
   text-align: center;
-  padding: 20px 0px;
+  padding: 15px 0px;
   border-radius: 40px;
   /* box-shadow: 0px 4px 1px #2aa537; */
   text-transform: uppercase;
@@ -61,7 +62,7 @@
 
 .attention {
   color: #ff70a6;
-  font-size: 30px;
+  /* font-size: 30px; */
   font-weight: bold;
   background-color: white;
   padding: 10px;
@@ -69,11 +70,15 @@
 }
 
 .sale-txt {
-  font-size: 35px;
+  /* font-size: 35px; */
   font-weight: bold;
 }
 
 .sale-subtxt {
-  font-size: 25px;
+  /* font-size: 25px; */
   font-style: italic;
+}
+
+.display-7 {
+  font-size: 1.2rem;
 }
