--- a/my-app/src/components/header/header.css
+++ b/my-app/src/components/header/header.css
@@ -4,6 +4,7 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  padding: 0 30px;
 }
 
 .nav-container ul {
@@ -29,7 +30,7 @@
   bottom: -3px;
   width: 100%;
   height: 2px;
-  background-color: #50d65e;
+  background-color: #0d6efd;
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.3s ease;
@@ -52,4 +53,10 @@
 
 .logo-container img {
   width: 100%;
+}
+
+@media (max-width: 550px) {
+  .nav-container {
+    display: none;
+  }
 }
