--- a/my-app/src/components/card/card.css
+++ b/my-app/src/components/card/card.css
@@ -7,10 +7,11 @@
   border: 0;
   position: relative;
   gap: 10px;
+  overflow: hidden;
 }
 
 .cardImg {
-  width: 100%;
+  height: 100%;
 }
 
 .cardName {
@@ -103,6 +104,6 @@
 }
 
 .imgWrapper {
-  max-height: 350px;
+  max-height: 365px;
   overflow: hidden;
 }
