--- a/my-app/src/components/customer-review/customer-review.css
+++ b/my-app/src/components/customer-review/customer-review.css
@@ -9,6 +9,10 @@
 .sliderImg {
   height: 100%;
   max-height: 150px;
+  max-width: 150px;
+  border-radius: 8px;
+  overflow: hidden;
+  width: 100%;
 }
 
 .sliderImg img {
@@ -64,5 +68,6 @@
 
   .sliderImg {
     height: 100px;
+    width: 100px;
   }
 }
