--- a/my-app/src/components/first-screen/first-screen.css
+++ b/my-app/src/components/first-screen/first-screen.css
@@ -33,9 +33,8 @@
   font-family: "Open Sans", Helvetica, sans-serif;
   color: #fff;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 18px;
   background: #0d6efd;
-
   display: block;
   text-align: center;
   padding: 15px 0px;
@@ -81,4 +80,10 @@
 
 .display-7 {
   font-size: 1.2rem;
+}
+
+@media (max-width: 768px) {
+  .display-7 {
+    font-size: 1rem;
+  }
 }
